--- a/styles/standard.css
+++ b/styles/standard.css
@@ -14,13 +14,27 @@ body {
     background-color: var(--primary-color);
     margin: 0; 
     color: white; 
+    font-family: 'Aldrich';
 }
 
 header{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 100px; 
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     background-color: var(--secondary-color);
+}
+
+.header_main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 50px; 
+}
+
+.header_main img {
+    height: 60px;
+    width: 60px;
 }
