--- a/templates/header.html
+++ b/templates/header.html
@@ -1,1 +1,5 @@
-<div><h1>POKEDEX</h1></div>
+<div class="header_main">
+    <img src="assets/img/logo.png" alt="Logo">
+    <h1>POKEDEX</h1>
+    <img class="sound_on" src="assets/img/sound_off.png" alt="Sound Symbol">
+</div>
