--- a/style.css
+++ b/style.css
@@ -12,13 +12,10 @@
 
 .pokemon_overview_card {
     padding: 35px;
-    width: 310px;
-    height: 310px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
-    margin: 20px;
+    align-items: center; 
     border-radius: 50px;
 }
 
@@ -26,7 +23,7 @@
     width: 100%;
 }
 
-.pokemon_over_card_id{
+.pokemon_over_card_id {
     width: 100%;
     display: flex;
     justify-content: flex-end;
@@ -52,7 +49,7 @@
     height: 150px;
     width: 150px;
     object-fit: contain;
-    
+
 }
 
 .pokemon_overview_card_typ_img {
@@ -61,4 +58,42 @@
     border-radius: 100%;
     border: 1px solid white;
     box-shadow: rgba(255, 255, 255, 0.75) 0px 22px 70px 4px;
+}
+
+
+.flip-card {
+    position: relative;
+    width: 310px;
+    height: 310px;
+    margin: 20px;
+    display: inline-block;
+    transition: transform 1.2s;
+    transform-style: preserve-3d;
+    vertical-align: top;
+    cursor: pointer;
+     perspective: 1000px;
+}
+
+
+.pokemon_overview_card_front,
+.pokemon_overview_card_back {
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.pokemon_overview_card_back {
+    transform: rotateY(180deg);
+}
+
+.flip-card:hover {
+  transform: rotateY(180deg);
+}
+
+.pokemon_detailed_card_view{
+    height: 650px;
+    width: 400px;
 }
