--- a/styles/standard.css
+++ b/styles/standard.css
@@ -2,6 +2,7 @@
     --primary-color: #0e1929;
     --secondary-color: #122035;
     --third-color: gray;
+    --font-color: #0e1929;
 
 }
 
@@ -12,16 +13,16 @@
 
 body {
     background-color: var(--primary-color);
-    margin: 0; 
-    color: white; 
+    margin: 0;
+    color: white;
     font-family: 'Aldrich';
 }
 
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 100px; 
+    height: 100px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     background-color: var(--secondary-color);
 }
@@ -31,10 +32,26 @@ header{
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 50px; 
+    padding: 50px;
 }
 
 .header_main img {
     height: 60px;
     width: 60px;
+}
+
+dialog {
+    padding: 0;
+    border: 1px solid #dedfd2;
+    border-radius: 5px;
+    outline: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+dialog[open]::backdrop {
+    backdrop-filter: blur(5px);
+}
+
+h2, h4 {
+    margin: 0;
 }
