--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@
     background: #dedfd2;
 }
 
-.pokemon_card_content_stats{
+.pokemon_card_content_stats {
     width: 100%;
     height: 100%;
     display: flex;
@@ -180,9 +180,32 @@
     justify-content: space-evenly;
 }
 
-.pokemon_card_content_stats_info{
+.pokemon_card_content_stats_info {
     display: flex;
     justify-content: space-between;
-    margin:0 75px 0 75px; 
+    margin: 0 75px 0 75px;
     font-size: 18px;
+}
+
+.pokemon_card_content_types {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.pokemon_card_content_types img {
+    height: 90px;
+    width: 90px;
+}
+
+.pokemon_card_content_types_translated{
+    width: 90px;
+    text-align: center;
+}
+
+.pokemon_card_content_types_figures{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
 }
