add chain & stats to card + loading spinner

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <div class="header_main">
     <img src="assets/img/logo.png" alt="Logo">
     <h1>POKEDEX</h1>
-    <img class="sound_on" src="assets/img/sound_off.png" alt="Sound Symbol">
+    <img class="pokeball" src="assets/img/pokeball.png" alt="Sound Symbol">
 </div>
