--- a/style.css
+++ b/style.css
@@ -1,7 +1,28 @@
-.sound_on {
-    height: 30px !important;
-    width: 30px !important;
-    filter: brightness(0) invert(1);
+.loader_section {
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    background-color: var(--primary-color);
+}
+
+.loader{
+    animation: spin 1s linear infinite; 
+}
+
+@keyframes spin {
+    0% {transform: rotate(0);}
+    100% {transform: rotate(360deg);}
+}
+
+.pokeball {
+    height: 50px !important;
+    width: 50px !important;
 }
 
 #pokemon_overview {
@@ -198,14 +219,32 @@
     width: 90px;
 }
 
-.pokemon_card_content_types_translated{
+.pokemon_card_content_types_translated {
     width: 90px;
     text-align: center;
 }
 
-.pokemon_card_content_types_figures{
+.pokemon_card_content_types_figures {
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: space-evenly;
+}
+
+.pokemon_card_detailed_view_chain {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pokemon_card_detailed_view_chain img {
+    height: 75px;
+    width: 75px;
+    object-fit: contain;
+}
+
+.pokemon_card_detailed_view_sound_symbol {
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
 }
