--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,8 @@
 <div class="header_main">
     <img src="assets/img/logo.png" alt="Logo">
     <h1>POKEDEX</h1>
-    <img class="pokeball" src="assets/img/pokeball.png" alt="Sound Symbol">
+    <div class="header_search_section">
+        <input id="search_pokemon" onkeypress="searchForPokemon(event)" type="text">
+        <img class="pokeball" src="assets/img/pokeball.png" alt="Sound Symbol"></div>
+    
 </div>
