--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
     <img src="assets/img/logo.png" alt="Logo">
     <h1>POKEDEX</h1>
     <div class="header_search_section">
-        <input id="search_pokemon" onkeypress="searchForPokemon(event)" type="text">
+        <input id="search_pokemon" onkeypress="searchForPokemon(event)" type="text" placeholder="Pokemon-Suche...">
         <img class="pokeball" src="assets/img/pokeball.png" alt="Sound Symbol"></div>
     
 </div>
